--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Learning</title>
+    <script>
+        console.log("Hello from html")
+    </script>
 </head>
 <body>
     <h1>Js is so fun.</h1>
-    <script src=""></script>
+    <script src="./topics/variable.js"></script>
+    <script src="./topics/helloWorld.js"></script>
 </body>
 </html>
