--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>Js is so fun.</h1>
-    <script src="./topics/helloWorld.js"></script>
-    <script src="./topics/variable.js"></script>
+    <!-- <script src="./topics/helloWorld.js"></script> -->
+    <!-- <script src="./topics/variable.js"></script> -->
+    <script src="./topics/operators.js"></script>
 </body>
 </html>
