--- a/javascript/index.html
+++ b/javascript/index.html
@@ -12,6 +12,7 @@
     <h1>Js is so fun.</h1>
     <!-- <script src="./topics/helloWorld.js"></script> -->
     <!-- <script src="./topics/variable.js"></script> -->
-    <script src="./topics/operators.js"></script>
+    <!-- <script src="./topics/operators.js"></script> -->
+     <script src="./topics/conditions.js"></script>
 </body>
 </html>
