--- a/javascript/index.html
+++ b/javascript/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="./topics/helloWorld.js"></script> -->
     <!-- <script src="./topics/variable.js"></script> -->
     <!-- <script src="./topics/operators.js"></script> -->
-     <script src="./topics/conditions.js"></script>
+    <!-- <script src="./topics/conditions.js"></script> -->
+    <script src="./topics/datatypes.js"></script>
+    <script src="./practise.js"></script>
 </body>
 </html>
