--- a/javascript/index.html
+++ b/javascript/index.html
@@ -14,7 +14,9 @@
     <!-- <script src="./topics/variable.js"></script> -->
     <!-- <script src="./topics/operators.js"></script> -->
     <!-- <script src="./topics/conditions.js"></script> -->
-    <script src="./topics/datatypes.js"></script>
+    <!-- <script src="./topics/datatypes.js"></script> -->
     <script src="./practise.js"></script>
+    <!-- <script src="./topics/scopes.js"></script> -->
+    <!-- <script src="./topics/hoisting.js"></script> -->
 </body>
-</html>
+</html> 
