--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="./practise.js"></script> -->
     <!-- <script src="./topics/scopes.js"></script> -->
     <!-- <script src="./topics/hoisting.js"></script> -->
-     <script src="./topics/recursion&stack.js"></script>
+    <!-- <script src="./topics/recursion&stack.js"></script> -->
+    <script src="./topics/arrays.js"></script>
 </body>
 </html> 
