--- a/html&css/media.html
+++ b/html&css/media.html
@@ -10,7 +10,7 @@
         <source src="./src/videos/desolate-yume-wallhack.3840x2160.mp4" type="video/mp4">
         Your browser does not the video
     </video>
-    <audio autoplay controls>
+    <audio autoplay controls muted>
         <source src="./src/audio/Imagine Dragons - thunder.mp3" type="audio/mpeg">
         Your browser does not support it.
     </audio>
