--- a/html&css/main_tags.html
+++ b/html&css/main_tags.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>     <!-- Tells html version -->
+<!DOCTYPE html> <!-- Tells html version -->
 
-<html>      <!-- Html root element -->
+<html lang="en"> <!-- Html root element -->
 
-    <head>  <!-- Metadata -->
-        <title>Learning html!</title>
+    <head>
+        <meta charset="UTF-8"> <!-- Translate bytes to characters (UTF-8 supports everything) -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive -->
+        <title>Learning HTML!</title>
+        <meta name="description" content="Learn HTML meta tags with simple examples.">
     </head>
 
-    <body>  <!-- Content of the page -->
+
+    <body> <!-- Content of the page -->
         <h1>Hello World</h1>
     </body>
+
 </html>
